--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 # ĐÃ SỬA: Chuyển lại thành UPDATE để bảo vệ dữ liệu đã lưu
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# --- Mail configuration ---
+spring.mail.host=localhost
+spring.mail.port=25
