--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # --- Cấu hình Cổng máy chủ ---
 # SỬA PORT: Đặt thành 8083 để đồng bộ với Frontend và tránh lỗi cổng bị chiếm dụng
 server.port=8083
-
-# --- Tên CSDL mới của chúng ta ---
+SS
+# --- Tên CSDL ---
 spring.datasource.url=jdbc:postgresql://localhost:5432/thehill_db
 
 # --- Thông tin đăng nhập CSDL ---
@@ -16,5 +16,13 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # --- Mail configuration ---
-spring.mail.host=localhost
-spring.mail.port=25
+spring.mail.host=smtp.gmail.com
+spring.mail.port=465
+spring.mail.username=ducmanhvi07@gmail.com
+spring.mail.password=lkpnijgpbvvqntgq
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+app.mail.from=ducmanhvi07@gmail.com
+# --- Password Reset configuration ---
+app.reset.pepper=MySecurePasswordResetPepper2024
